--- a/parent/device-registry/src/main/webapp/public/pages/things/view.html
+++ b/parent/device-registry/src/main/webapp/public/pages/things/view.html
@@ -1,16 +1,3 @@
-<style>
-	#alive{
-		float: left;
-		width: 50%;
-		padding-right: 1em;
-	};
-	#biDirectional{
-		float: right;
-		width: 50%;
-		padding-left: 1em;
-	};
-</style>
-
 <div class="modal-content" style="width: 50em; height: 30em;">
 	<div class="modal-header">
 		<h4 class="modal-title">Thing Details</h4>
@@ -39,22 +26,12 @@
 							</div>
 						</td>
 						<td width="50%"  style="padding: 0 0 0 1em;">
-							<div class="form-group">
-								<div id="boolVals">
-									<span id="alive">
-										<label>Alive</label>
-										<span style="float:right;">
-											<input type="checkbox" data-value="alive" disabled="disabled" readonly="readonly">
-										</span>
-									</span>
-									<span id="biDirectional">
-										<label>BiDirectional</label>
-										<span style="float:right;">
-											<input type="checkbox" data-value="biDirectional" disabled="disabled" readonly="readonly">
-										</span>
-									</span>
-								</div>
-							</div>
+							<span>
+								<label>Alive</label>
+								<span style="float:right;">
+									<input id="alive" type="checkbox" data-value="alive" disabled="disabled" readonly="readonly">
+								</span>
+							</span>
 						</td>
 					</tr>
 					<tr>
@@ -65,17 +42,19 @@
 							</div>
 						</td>
 						<td width="50%"  style="padding: 0 0 0 1em;">
-							<div class="form-group">
-								<label for="tags">Tags</label> 
-								<input type="text" readonly="readonly" disabled="disabled" data-value="tags" class="form-control" id="tags">
-							</div>
+							<span>
+								<label>BiDirectional</label>
+								<span style="float:right;">
+									<input id="biDirectional" type="checkbox" data-value="biDirectional" disabled="disabled" readonly="readonly">
+								</span>
+							</span>
 						</td>
 					</tr>
 					<tr>
 						<td width="50%" style="padding: 0 1em 0 0;">
 							<div class="form-group">
-								<label for="templateName">Template</label> 
-								<input type="text" readonly="readonly" disabled="disabled" data-value="templateName" class="form-control" id="templateName">
+								<label for="thingDescription">Description</label> 
+								<input type="text" readonly="readonly" disabled="disabled" data-value="description" class="form-control" id="thingDescription">
 							</div>
 						</td>
 						<td width="50%"  style="padding: 0 0 0 1em;" rowspan="2">
@@ -86,10 +65,10 @@
 						</td>
 					</tr>
 					<tr>
-						<td width="50%" style="padding: 0 1em 0 0;">
+						<td width="50%"  style="padding: 0 1em 0 0;">
 							<div class="form-group">
-								<label for="thingDescription">Description</label> 
-								<input type="text" readonly="readonly" disabled="disabled" data-value="description" class="form-control" id="thingDescription">
+								<label for="tags">Tags</label> 
+								<input type="text" readonly="readonly" disabled="disabled" data-value="tags" class="form-control" id="tags">
 							</div>
 						</td>
 					</tr>
@@ -122,3 +101,15 @@
 		</div>
 	</div>
 </div>
+<script>
+	renderModal = (function($){
+		var toView = function(thing){
+			$("#alive").prop("checked", thing.alive);
+			$("#biDirectional").prop("checked", thing.biDirectional);
+		};
+		return function(thing){
+			toView(thing);
+		};
+		
+	})(jQuery);
+</script>
