--- a/parent/device-registry/src/main/webapp/public/pages/things/view.html
+++ b/parent/device-registry/src/main/webapp/public/pages/things/view.html
@@ -8,6 +8,9 @@
 				<a class="nav-link active" id="thing-details-tab" data-toggle="tab" href="#thing-details-tab-content" role="tab" aria-controls="thing-details" aria-selected="true">Details</a>
 			</li>
 			<li class="nav-item">
+				<a class="nav-link" id="metrics-tab" data-toggle="tab" href="#metrics-tab-content" role="tab" aria-controls="metrics" aria-selected="false">Metrics</a>
+			</li>
+			<li class="nav-item">
 				<a class="nav-link" id="location-tab" data-toggle="tab" href="#location-tab-content" role="tab" aria-controls="location" aria-selected="false">Location</a>
 			</li>
 			<li class="nav-item">
@@ -74,6 +77,19 @@
 					</tr>
 				</table>
 			</div>
+			<div class="tab-pane" id="metrics-tab-content" role="tabpanel" aria-labelledby="metrics-tab">
+				<table id="metrics-table" class="table table-striped table-bordered table-sm" style="width:100%;">
+					<thead>
+						<tr>
+							<th scope="col">Name</th>
+							<th scope="col">Abbreviation</th>
+							<th scope="col">Unit</th>
+							<th scope="col">Data Type</th>
+							<th scope="col">Description</th>
+						</tr>
+					</thead>
+				</table>
+			</div>
 			<div class="tab-pane" id="location-tab-content" role="tabpanel" aria-labelledby="location-tab">
 				<div class="form-group">
 					<label for="altitude">Altitude</label> 
@@ -106,6 +122,20 @@
 		var toView = function(thing){
 			$("#alive").prop("checked", thing.alive);
 			$("#biDirectional").prop("checked", thing.biDirectional);
+			$("#metrics-table").DataTable({
+				searching: false,
+				ordering: false,
+				paging: false,
+				info: false,
+				data: thing.metrics,
+				columns : [
+					{data: "name"},
+					{data: "abbreviation"},
+					{data: "unit"},
+					{data: "dataType"},
+					{data: "description"},
+				]
+			});
 		};
 		return function(thing){
 			toView(thing);
